# traders-cockpit

./: .dockerignore  .env.example  .env.personal-paper.example  .env.production.example  .gitignore  AGENTS.md  README.md  Traders Cockpit.md  UI.html  docker-compose.yml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_auth_storage.py  0002_hedge_hardening_foundation.py
backend/app/: __init__.py  main.py
backend/app/adapters/: broker.py  market_data.py
backend/app/api/: __init__.py  deps_auth.py  routes_account.py  routes_auth.py  routes_broker.py  routes_market.py  routes_positions.py  routes_trade.py
backend/app/core/: config.py  observability.py  startup_preflight.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: cockpit.py
backend/app/services/: auth.py  cockpit.py  entry_order_rules.py
backend/app/tests/: test_api.py  test_auth_store.py  test_startup_preflight.py
backend/app/ws/: manager.py
docs/architecture/: COMPONENT_MATRIX.md  OVERVIEW.md  architecture-diagram.html  diagram.jsx
docs/decisions/: 2026-03-21-tradectrl-reuse-boundaries.md
docs/handoffs/: 2026-03-21-final-ui-parity-50-checklist.md  2026-03-21-integration-readiness.md  2026-03-21-stop-plan-live-refresh-50-checklist.md  (+3 more)
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  vitest.config.ts
(+117 files in other folders)
