[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traders-cockpit-backend"
version = "0.1.0"
description = "FastAPI backend for traders-cockpit"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.1",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.4",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "pytest>=8.3.4",
  "ruff>=0.8.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "I001", "UP037", "UP043"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
